# inference-deploy

./: README.md
engine/: CMakeLists.txt  base_engine.h
engine/backend/tensorrt/: CMakeLists.txt
engine/backend/tensorrt/utils/: net_utils.cc  net_utils.h  nv_utils.h
engine/backend/tvm/: CMakeLists.txt  tvm_backend.h  tvm_context.h
engine/base/: base_backend.h
resnet-50/: CMakeLists.txt  main.cc
resnet-50/engine/: resnet_engine.cc  resnet_engine.h
yolo/: yolo_engine.cc  yolo_engine.h
